--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -52,6 +52,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+.menu {
+	display: none;
+}
+
 #banner {
 	background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../img/restaurant.png) no-repeat;
 	background-size: cover;
@@ -124,7 +128,7 @@ h1, h2, h3, h4, h5, h6 {
 			max-width: 100%;
 		}
 		.title {
-			font-size: 1.25em;
+			font-size: 1em;
 			margin: 1em 0 0 0;
 			color: $main;
 		}
@@ -143,6 +147,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: #2f3032;
 	.newsletter_inner {
 		width: 600px;
+		max-width: 90%;
 		margin: 0 auto;
 	}
 	h2 {
@@ -188,5 +193,123 @@ h1, h2, h3, h4, h5, h6 {
 	.copyright {
 		color: $secondary;
 		font-size: .75em;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	#main_nav {
+		display: none;
+	}
+	#main_nav.active {
+		display: block;
+		width: 100%;
+		a {
+			display: block;
+			padding: 1em 0;
+			border-bottom: 1px solid #E9E9E9;
+			&:last-child {
+				border-bottom: none;
+			}
+		}
+	}
+	.menu {
+		display: block;
+		float: right;
+		i {
+			font-size: 1.5em;
+			color: $main;
+			padding-top: .6em;
+		}
+	}
+
+	#banner {
+		padding: 3.5em 0;
+		#poster {
+			width: 250px;
+		}
+		#content {
+			margin-left: 50px;
+			.title {
+				font-size: 1.5em;
+			}
+			.description {
+				font-size: .9em;
+			}
+			.info {
+				color: $white;
+				font-size: .7em;
+				margin-top: 2em;
+				span {
+					margin: 0 .25em;
+				}
+			}
+		}
+	}
+
+	.row {
+		.post {
+			width: 30.6%;
+			margin: 0 1.25% 2em 1.25%;
+			.title {
+				font-size: 1em;
+				margin: 5em 0 0 0;
+			}
+			.post_info {
+				font-size: .65em;
+			}
+		}
+	}
+
+	#top_movies {
+		padding: 3em 0;
+		header {
+			padding: 0 0 1.5em 1.25%;
+			h2 {
+				font-size: 1.5em;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 575px) {
+	#banner {
+		#banner_content_wrapper {
+			display: block;
+			#poster {
+				width: 250px;
+				float: none;
+				display: block;
+				margin: 0 auto;
+			}
+			#content {
+				width: 100%;
+				margin: 1em auto 0 auto;
+			}
+		}
+	}
+
+	.row {
+		.post {
+			width: 250px;
+			margin: 0 auto 2em auto;
+			float: none;
+		}
+	}
+}
+
+#newsletter {
+	padding: 3em 0;
+	h2 {
+		font-size: 1.35em;
+	}
+	.sign_up_form {
+		margin-top: 2em;
+		input[type="text"], input[type="email"] {
+			width: 90%;
+			margin: 0 0 1em 0;
+		}
+	}
+	.button {
+		margin-top: 2em;
 	}
 }
